--- a/react-app/package.json
+++ b/react-app/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://samuelsogbesan.github.io/portfolio-repo",
+  "homepage": "http://samuelsogbesan.github.io/Project",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
@@ -22,7 +22,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "redeploy": "npm run build",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
