--- a/react-app/package.json
+++ b/react-app/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://samuelsogbesan.github.io/Project",
+  "homepage": "http://samuelsogbesan.github.io/portfolio",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
